--- a/src/app/view/css/theme_light.css
+++ b/src/app/view/css/theme_light.css
@@ -43,4 +43,5 @@
 
 .infoView .infoDate, .infoView .infoPriority {
 	-fx-text-fill: #0056BD;
+	-fx-fill: #0056BD;
 }
